--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Denver Debuggers - The Simpsons Project</title>
+  <title>Denver Debuggers - The Simpsons Project.</title>
   <script type="module" src="/src/main.tsx"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
